--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -14,3 +14,11 @@
 .rgbutton{
     float:right;
 }
+
+img{
+    vertical-align: middle;
+    border-style: none;
+    width: 67px;
+    height: 53px;
+    border-radius: 16px;
+}
