--- a/frontend/src/app/registration/registration.component.scss
+++ b/frontend/src/app/registration/registration.component.scss
@@ -8,6 +8,11 @@ body {
 	font-size: 14px;
 	background: #f2f2f2;
 }
+
+.imgbox img {
+  width: 500px;
+  margin-bottom: 20px;
+}
 .clearfix {
 	&:after {
 		content: "";
